FInal Flask App

--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Deposit BOTrade24  - Bitcoin Online Trading Company</title>
+    <title>Cryptofinesse Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
@@ -30,85 +30,22 @@
     <script src="{{ url_for('static', filename='assets/js/modernizr.js') }}"></script>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5faaa2a98e1c140c2abcaeb0/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5faaa2a98e1c140c2abcaeb0/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 
 </head>
 
 <body>
-    <!-- SVG Preloader Starts -->
-    <div id="preloader">
-        <div id="preloader-content">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="150px" viewbox="100 100 400 400" xml:space="preserve">
-                <filter id="dropshadow" height="130%">
-                <fegaussianblur in="SourceAlpha" stddeviation="5"></fegaussianblur>
-                <feoffset dx="0" dy="0" result="offsetblur"></feoffset>
-                <feflood flood-color="red"></feflood>
-                <fecomposite in2="offsetblur" operator="in"></fecomposite>
-                <femerge>
-                <femergenode></femergenode>
-                <femergenode in="SourceGraphic"></femergenode>
-                </femerge>
-                </filter>          
-                <path class="path" fill="#000000" d="M446.089,261.45c6.135-41.001-25.084-63.033-67.769-77.735l13.844-55.532l-33.801-8.424l-13.48,54.068
-                    c-8.896-2.217-18.015-4.304-27.091-6.371l13.568-54.429l-33.776-8.424l-13.861,55.521c-7.354-1.676-14.575-3.328-21.587-5.073
-                    l0.034-0.171l-46.617-11.64l-8.993,36.102c0,0,25.08,5.746,24.549,6.105c13.689,3.42,16.159,12.478,15.75,19.658L208.93,357.23
-                    c-1.675,4.158-5.925,10.401-15.494,8.031c0.338,0.485-24.579-6.134-24.579-6.134l-9.631,40.468l36.843,9.188
-                    c8.178,2.051,16.209,4.19,24.098,6.217l-13.978,56.17l33.764,8.424l13.852-55.571c9.235,2.499,18.186,4.813,26.948,6.995
-                    l-13.802,55.309l33.801,8.424l13.994-56.061c57.648,10.902,100.998,6.502,119.237-45.627c14.705-41.979-0.731-66.193-31.06-81.984
-                    C425.008,305.984,441.655,291.455,446.089,261.45z M368.859,369.754c-10.455,41.983-81.128,19.285-104.052,13.589l18.562-74.404
-                    C306.28,314.65,379.774,325.975,368.859,369.754z M379.302,260.846c-9.527,38.187-68.358,18.781-87.442,14.023l16.828-67.489
-                    C327.767,212.14,389.234,221.02,379.302,260.846z"></path>       
-            </svg>
-        </div>
-    </div>
-    <!-- SVG Preloader Ends -->
-    <!-- Live Style Switcher Starts - demo only -->
-    <div id="switcher" class="">
-        <div class="content-switcher">
-            <h4>STYLE SWITCHER</h4>
-            <ul>
-                <li>
-                    <a id="orange-css" href="#" title="orange" class="color"><img src="{{ url_for('static', filename='assets/images/styleswitcher/colors/orange.png') }}" alt="" width="30" height="30"></a>
-                </li>
-                <li>
-                    <a id="green-css" href="#" title="green" class="color"><img src="images/styleswitcher/colors/green.png') }}" alt="" width="30" height="30"></a>
-                </li>
-                <li>
-                    <a id="blue-css" href="#" title="blue" class="color"><img src="images/styleswitcher/colors/blue.png') }}" alt="" width="30" height="30"></a>
-                </li>
-            </ul>
-
-            <p>BODY SKIN</p>
-
-            <label><input class="dark_switch" type="radio" name="color_style" id="is_dark" value="dark" checked="checked"> Dark</label>
-            <label><input class="dark_switch" type="radio" name="color_style" id="is_light" value="light"> Light</label>
-
-            <hr>
-
-            <p>LAYOUT STYLE</p>
-            <label><input class="boxed_switch" type="radio" name="layout_style" id="is_wide" value="wide" checked="checked"> Wide</label>
-            <label><input class="boxed_switch" type="radio" name="layout_style" id="is_boxed" value="boxed"> Boxed</label>
-
-            <hr>
-
-            <a href="#" class="custom-button purchase">Purchase</a>
-            <div id="hideSwitcher">&times;</div>
-
-        </div>
-    </div>
-    <div id="showSwitcher" class="styleSecondColor"><i class="fa fa-cog fa-spin"></i></div>
-    <!-- Live Style Switcher Ends - demo only -->
     <!-- Wrapper Starts -->
     <div class="wrapper">
         <!-- Header Starts -->
@@ -143,8 +80,11 @@ s0.parentNode.insertBefore(s1,s0);
                     <!-- User Sign In/Sign Up Starts -->
                     <div class="col-md-3 col-lg-3">
                         <ul class="unstyled user">
-                            <li class="sign-in"><a href="{{ url_for('auth.login') }}" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                            <li class="sign-up"><a href="{{ url_for('auth.register') }}" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            {% if current_user.is_authenticated %}
+                            <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary" > <i class="fa fa-user" > </i>  Log Out</a></li>
+                            {% else %}
+                            <li><a class="btn btn-primary" href="{{ url_for('auth.login') }}" > <i class="fa fa-user-plus" > </i>  Log In</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                     <!-- User Sign In/Sign Up Ends -->
@@ -155,7 +95,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="container">
                     <div class="site-nav-inner">
                         <!-- Logo For ONLY Mobile display Starts -->
-                        <a class="logo-mobile" href="index.html">
+                        <a class="logo-mobile" href="{{ url_for('main.index') }}">
               <img id="logo-mobile" class="img-responsive" src="{{ url_for('static', filename='assets/images/logo-dark.png') }}" alt="">
             </a>
                         <!-- Logo For ONLY Mobile display Ends -->
@@ -178,24 +118,18 @@ s0.parentNode.insertBefore(s1,s0);
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">pages <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="{{ url_for('auth.register') }}">Register page</a></li>
-                                        {% if current_user.is_authenticated %}
-                                        <li><a href="{{ url_for('auth.logout') }}" >Log Out</a></li>
-                                        {% else %}
-                                        <li><a href="{{ url_for('auth.login') }}" >Log In</a></li>
-                                        {% endif %}
                                         <li><a href="{{ url_for('main.shopping_cart') }}">Deposit</a></li>
                                         <li><a href="{{ url_for('main.withdraw') }}">Withdraw</a></li>
                                         <li><a href="{{ url_for('main.upgrade') }}">Upgrade Account</a></li>
                                         <li><a href="{{ url_for('main.shopping_checkout') }}">shopping checkout</a></li>
                                         <li><a href="{{ url_for('main.faq') }}">FAQ page</a></li>
                                         <li><a href="{{ url_for('main.terms') }}">Terms of Services</a></li>
+                                        <li><a href="{{ url_for('auth.password_change') }}">Change Password</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="{{ url_for('main.contact') }}">Contact</a></li>
                                 {% if current_user.is_authenticated %}
-                                <li><a href="{{ url_for('main.user', name=current_user.first_name) }}">Profile</a></li>
-                                <li><a href="{{ url_for('auth.password_change') }}">Change Password</a></li>
+
                                 {% endif %}
                                 {% if current_user.is_administrator %}
                                 <a class="btn btn-danger"
@@ -330,7 +264,6 @@ s0.parentNode.insertBefore(s1,s0);
                 <p class="lead">Open account for free and start trading Bitcoins!</p>
               </div>
               <!-- Call To Action Text Ends -->
-              <!-- Call To Action Button Starts -->
               <p class="action-btn"><a class="btn btn-primary" href="{{ url_for('auth.register') }}">Register Now</a></p>
               <!-- Call To Action Button Ends -->
             </div>
