--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -186,8 +186,9 @@
                     <!-- Content Starts -->
                     <div class="col-sm-12 col-md-7 col-lg-6">
 						<div class="feature-about">
-							<h3 class="title-about">WE ARE BOTRADE24</h3>
-							<p>A place for everyone who wants to simply buy and sell Bitcoins. Deposit funds using your Visa/MasterCard or bank transfer. Instant buy/sell of Bitcoins at fair price is guaranteed. Nothing extra. Join over 700,000 users from all over the world satisfied with our services.</p>
+							<h3 class="title-about">WE ARE CRYPTOFINESSE</h3>
+							<p>A team and family where we offer our professional trading services to beginners and investors interested in the earning real good massive profits so we can win together, your happiness is our first priority.</p>
+                            <p>And for everyone who wants to simply buy and sell Bitcoins. Deposit funds using your Visa/MasterCard or bank transfer. Instant buy/sell of Bitcoins at fair price is guaranteed. Nothing extra. Join over 700,000 users from all over the world satisfied with our services</p>
 						</div>
 						<div class="feature-about">
 							<h3 class="title-about risk-title"><i class="fa fa-warning"></i> risk warning</h3>
@@ -209,7 +210,7 @@
 				<!-- Fact Badges Starts -->
 				<div class="row text-center facts-content">
 					<div class="text-center heading-facts">
-						<h2>Bayya<span> numbers</span></h2>
+						<h2>Cryptofinesse<span> numbers</span></h2>
 						<p>leading cryptocurrency exchange since day one of Bitcoin distribution</p>
 					</div>
 					<!-- Fact Badge Item Starts -->
@@ -254,7 +255,7 @@
                 <div class="row text-center">
                     <h2 class="title-head">our <span>experts</span></h2>
                     <div class="title-head-subtitle">
-                        <p> A talented team of Cryptocurrency experts based in London</p>
+                        <p>A TALENTED GROUP OF CRYPTOCURRENCY EXPERTS AROUND THE WORLD</p>
                     </div>
                 </div>
                 <!-- Section Title Ends -->
@@ -268,7 +269,7 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Maryana Mori</h4>
+                                <h4>Teresa Benitez</h4>
                                 <p>Ceo Founder</p>
                                 <ul class="list list-inline social">
                                     <li>
@@ -294,7 +295,7 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Marco Verratti</h4>
+                                <h4>Bruce Verratti</h4>
                                 <p>Director</p>
                                 <ul class="list list-inline social">
                                     <li>
@@ -347,7 +348,7 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Antonio Conte</h4>
+                                <h4>Antonio Shrewsbury</h4>
                                 <p>Bitcoin Developer</p>
                                 <ul class="list list-inline social">
                                     <li>
