--- a/app/templates/main/pricing.html
+++ b/app/templates/main/pricing.html
@@ -179,7 +179,7 @@
                     </div>
                     {% endfor %}
 				<h3 class="text-center">Buy Bitcoins</h3>
-				<p class="text-center">Buy bitcoins with your credit card or cash here! Register to BOTrade24 and get your bitcoins today.</p>
+				<p class="text-center">Buy bitcoins with your credit card or cash here! Register to cryptofinesses and get your bitcoins today.</p>
                 <div class="row pricing-tables-content pricing-page">
                     <div class="pricing-container">
                         <!-- Pricing Tables Starts -->
@@ -189,14 +189,14 @@
                                     <!-- Pricing Table #1 Starts -->
                                     <li>
                                         <header class="pricing-header">
-                                            <h2>GET 0.007 BTC <span>For </span></h2>
+                                            <h2>REGULAR<span>For </span></h2>
                                             <div class="price">
-                                                <span class="currency"><i class="fa fa-dollar"></i></span>
-                                                <span class="value">300</span>
+                                                <span class="currency"></span>
+                                                <span class="value" style="font-size:100%;"><i class="fa fa-dollar"></i>100 - <i class="fa fa-dollar"></i>520</span>
                                             </div>
                                         </header>
                                         <footer class="pricing-footer">
-                                            <a href="#" class="btn btn-primary">ORDER NOW</a>
+                                            <a href="#" class="btn btn-primary">GET STARTED</a>
                                         </footer>
                                     </li>
                                     <!-- Pricing Table #1 Ends -->
@@ -204,56 +204,56 @@
                             </li>
                             <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                                 <ul class="pricing-wrapper">
-                                    <!-- Pricing Table #2 Starts -->
+                                    <!-- Pricing Table #1 Starts -->
                                     <li>
                                         <header class="pricing-header">
-                                            <h2>GET 0.015 BTC <span>For </span></h2>
+                                            <h2>VIP<span>For </span></h2>
                                             <div class="price">
-                                                <span class="currency"><i class="fa fa-dollar"></i></span>
-                                                <span class="value">500</span>
+                                                <span class="currency"></span>
+                                                <span class="value" style="font-size:100%;"><i class="fa fa-dollar"></i>10,000 - <i class="fa fa-dollar"></i>52,000</span>
                                             </div>
                                         </header>
                                         <footer class="pricing-footer">
-                                            <a href="#" class="btn btn-primary">ORDER NOW</a>
+                                            <a href="#" class="btn btn-primary">GET STARTED</a>
                                         </footer>
                                     </li>
-                                    <!-- Pricing Table #2 Ends -->
+                                    <!-- Pricing Table #1 Ends -->
                                 </ul>
                             </li>
                             <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                                 <ul class="pricing-wrapper">
-                                    <!-- Pricing Table #3 Starts -->
+                                    <!-- Pricing Table #1 Starts -->
                                     <li>
                                         <header class="pricing-header">
-                                            <h2>GET 0.031 BTC <span>For </span></h2>
+                                            <h2>PREMIUM<span>For </span></h2>
                                             <div class="price">
-                                                <span class="currency"><i class="fa fa-dollar"></i></span>
-                                                <span class="value">700</span>
+                                                <span class="currency"></span>
+                                                <span class="value" style="font-size:100%;"><i class="fa fa-dollar"></i>1M - <i class="fa fa-dollar"></i>5.2M</span>
                                             </div>
                                         </header>
                                         <footer class="pricing-footer">
-                                            <a href="#" class="btn btn-primary">ORDER NOW</a>
+                                            <a href="#" class="btn btn-primary">GET STARTED</a>
                                         </footer>
                                     </li>
-                                    <!-- Pricing Table #3 Ends -->
+                                    <!-- Pricing Table #1 Ends -->
                                 </ul>
                             </li>
                             <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                                 <ul class="pricing-wrapper">
-                                    <!-- Pricing Table #4 Starts -->
+                                    <!-- Pricing Table #1 Starts -->
                                     <li>
                                         <header class="pricing-header">
-                                            <h2>GET 0.081 BTC <span>For </span></h2>
+                                            <h2>ULTIMATE PLAN<span>For </span></h2>
                                             <div class="price">
-                                                <span class="currency"><i class="fa fa-dollar"></i></span>
-                                                <span class="value">1,000</span>
+                                                <span class="currency"></span>
+                                                <span class="value" style="font-size:100%;"><i class="fa fa-dollar"></i>10M - <i class="fa fa-dollar"></i>52M</span>
                                             </div>
                                         </header>
                                         <footer class="pricing-footer">
-                                            <a href="#" class="btn btn-primary">ORDER NOW</a>
+                                            <a href="#" class="btn btn-primary">GET STARTED</a>
                                         </footer>
                                     </li>
-                                    <!-- Pricing Table #4 Ends -->
+                                    <!-- Pricing Table #1 Ends -->
                                 </ul>
                             </li>
                         </ul>
