--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -44,57 +44,59 @@
                 </div>
             <!-- Alert Ends -->
             <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
-                <!-- Logo Starts -->
-                <a class="logo" href="{{ url_for('main.index') }}">
-                    <img id="logo-user" class="img-responsive" src="{{ url_for('static', filename='assets/images/logo-dark.png') }}" alt="logo">
-                </a>
-                <!-- Logo Ends -->
-                <!-- Slider Starts -->
-                <div id="carousel-testimonials" class="carousel slide carousel-fade" data-ride="carousel">
-                    <!-- Indicators Starts -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-testimonials" data-slide-to="1"></li>
-                        <li data-target="#carousel-testimonials" data-slide-to="2"></li>
-                    </ol>
-                    <!-- Indicators Ends -->
-                    <!-- Carousel Inner Starts -->
-                    <div class="carousel-inner">
-                        <!-- Carousel Item Starts -->
-                        <div class="item active item-1">
-                            <div>
-                                <blockquote>
-                                    <p>This is a realistic program for anyone looking for site to invest. Paid to me regularly, keep up good work!</p>
-                                    <footer><span>Lucy Smith</span>, England</footer>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <!-- Carousel Item Ends -->
-                        <!-- Carousel Item Starts -->
-                        <div class="item item-2">
-                            <div>
-                                <blockquote>
-                                    <p>Bitcoin doubled in 7 days. You should not expect anything more. Excellent customer service!</p>
-                                    <footer><span>Slim Hamdi</span>, Tunisia</footer>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <!-- Carousel Item Ends -->
-                        <!-- Carousel Item Starts -->
-                        <div class="item item-3">
-                            <div>
-                                <blockquote>
-                                    <p>My family and me want to thank you for helping us find a great opportunity to make money online. Very happy with how things are going!</p>
-                                    <footer><span>Rawia Chniti</span>, Russia</footer>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <!-- Carousel Item Ends -->
-                    </div>
-                    <!-- Carousel Inner Ends -->
-                </div>
-                <!-- Slider Ends -->
-            </div>
+					<!-- Logo Starts -->
+					<a class="logo" href="{{ url_for('main.index') }}">
+						<img id="logo-user" class="img-responsive" src="{{ url_for('static', filename='assets/images/logo-dark.png') }}" alt="logo">
+					</a>
+					<!-- Logo Ends -->
+					<!-- Slider Starts -->
+					<div id="carousel-testimonials" class="carousel slide carousel-fade" data-ride="carousel">
+						<!-- Indicators Starts -->
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-testimonials" data-slide-to="1"></li>
+							<li data-target="#carousel-testimonials" data-slide-to="2"></li>
+						</ol>
+						<!-- Indicators Ends -->
+						<!-- Carousel Inner Starts -->
+						<div class="carousel-inner">
+							<!-- Carousel Item Starts -->
+							<div class="item active item-1">
+								<div>
+									<blockquote>
+										<p>Hello everyone, I'm here to say a big thank you to my expert trader on Bitcoin investment @cryptofinesse she is one of the best on online investments, you can try her. Today am financial free from all depth and I have enough to train my kids to the higher institution. I really don't know how best to say I'm grateful for your help but all I'll say is God bless you and your family cryptofinesse. I really appreciate the effort Mrs Teresa Benitez has put to make sure I'm a successful investor on the stock exchange market. I first I didn't believed in it but she told me that I should trust the process and I did. Invest $100 and earn $500 cryptofinesse She's very trustworthy
+										</p>
+										<footer><span>Lucy Smith</span>, England</footer>
+									</blockquote>
+								</div>
+							</div>
+							<!-- Carousel Item Ends -->
+							<!-- Carousel Item Starts -->
+							<div class="item item-2">
+								<div>
+									<blockquote>
+										<p>@cryptofinesse help me earned $10,000 after I invested $2000. All thanks to Mrs Teresa Benitez, God bless you. Invest your Cryptocurrency with @cryptofinesse she's reliable
+. @earn_with_mrs.teresa helped Me earned $15000, thank you for all your good works</p>
+										<footer><span>Slim Hamdi</span>, Tunisia</footer>
+									</blockquote>
+								</div>
+							</div>
+							<!-- Carousel Item Ends -->
+							<!-- Carousel Item Starts -->
+							<div class="item item-3">
+								<div>
+									<blockquote>
+										<p>I invested $100,000 on @cryptofinesse and earned $500,000. Thanks Madam, please keep up the good works. With Mrs Teresa Benitez, trading bitcoins is real and very profitable. @cryptofinesse. Ever since I started investing with Mrs Teresa Benitez, she has always kept to her word, so I urge each one of you to visit her page cryptofinesse and get information on how to start earning.</p>
+										<footer><span>Rawia Chniti</span>, Russia</footer>
+									</blockquote>
+								</div>
+							</div>
+							<!-- Carousel Item Ends -->
+						</div>
+						<!-- Carousel Inner Ends -->
+					</div>
+					<!-- Slider Ends -->
+				</div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <!-- Logo Starts -->
                 <a class="visible-xs" href="{{ url_for('main.index') }}">
