--- a/app/templates/main/shopping-cart.html
+++ b/app/templates/main/shopping-cart.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Deposit BOTrade24  - Bitcoin Online Trading Company</title>
+    <title>Deposit - Cryptofinesse</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
