--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -54,7 +54,8 @@
 							<div class="item active item-1">
 								<div>
 									<blockquote>
-										<p>This is a realistic program for anyone looking for site to invest. Paid to me regularly, keep up good work!</p>
+										<p>Hello everyone, I'm here to say a big thank you to my expert trader on Bitcoin investment @cryptofinesse she is one of the best on online investments, you can try her. Today am financial free from all depth and I have enough to train my kids to the higher institution. I really don't know how best to say I'm grateful for your help but all I'll say is God bless you and your family cryptofinesse. I really appreciate the effort Mrs Teresa Benitez has put to make sure I'm a successful investor on the stock exchange market. I first I didn't believed in it but she told me that I should trust the process and I did. Invest $100 and earn $500 cryptofinesse She's very trustworthy
+										</p>
 										<footer><span>Lucy Smith</span>, England</footer>
 									</blockquote>
 								</div>
@@ -64,7 +65,8 @@
 							<div class="item item-2">
 								<div>
 									<blockquote>
-										<p>Bitcoin doubled in 7 days. You should not expect anything more. Excellent customer service!</p>
+										<p>@cryptofinesse help me earned $10,000 after I invested $2000. All thanks to Mrs Teresa Benitez, God bless you. Invest your Cryptocurrency with @cryptofinesse she's reliable
+. @earn_with_mrs.teresa helped Me earned $15000, thank you for all your good works</p>
 										<footer><span>Slim Hamdi</span>, Tunisia</footer>
 									</blockquote>
 								</div>
@@ -74,7 +76,7 @@
 							<div class="item item-3">
 								<div>
 									<blockquote>
-										<p>My family and me want to thank you for helping us find a great opportunity to make money online. Very happy with how things are going!</p>
+										<p>I invested $100,000 on @cryptofinesse and earned $500,000. Thanks Madam, please keep up the good works. With Mrs Teresa Benitez, trading bitcoins is real and very profitable. @cryptofinesse. Ever since I started investing with Mrs Teresa Benitez, she has always kept to her word, so I urge each one of you to visit her page cryptofinesse and get information on how to start earning.</p>
 										<footer><span>Rawia Chniti</span>, Russia</footer>
 									</blockquote>
 								</div>
