--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -295,8 +295,8 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Bruce Verratti</h4>
-                                <p>Director</p>
+                                <h4>Robinson Campbell</h4>
+                                <p>Senior account manager</p>
                                 <ul class="list list-inline social">
                                     <li>
                                         <a href="#" class="fa fa-facebook"></a>
@@ -322,8 +322,8 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Emilia Bella</h4>
-                                <p>Bitcoin Consultant</p>
+                                <h4>Catherine Stewart</h4>
+                                <p>Senior account manager</p>
                                 <ul class="list list-inline social">
                                     <li>
                                         <a href="#" class="fa fa-facebook"></a>
@@ -348,8 +348,8 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Antonio Shrewsbury</h4>
-                                <p>Bitcoin Developer</p>
+                                <h4>Kevin Richman</h4>
+                                <p>Senior account manager</p>
                                 <ul class="list list-inline social">
                                     <li>
                                         <a href="#" class="fa fa-facebook"></a>
