--- a/app/templates/main/unconfirmed.html
+++ b/app/templates/main/unconfirmed.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <!-- Copyright Text Starts -->
-                <p class="text-center copyright-text">Copyright © 2018 Bayya All Rights Reserved</p>
+                <p class="text-center copyright-text">Copyright © 2023 Cryptofinesse All Rights Reserved</p>
                 <!-- Copyright Text Ends -->
             </div>
         </div>
