--- a/app/templates/main/withdrawpage.html
+++ b/app/templates/main/withdrawpage.html
@@ -355,7 +355,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- Copyright Text Starts -->
-                            <p class="text-center">Copyright © 2018 Bayya All Rights Reserved | Created with Love by <a href="../user/celtano.html" target="_blank">celtano</a></p>
+                            <p class="text-center">Copyright © 2023 Cryptofinesse All Rights Reserved | Created with Love by <a href="../user/celtano.html" target="_blank">celtano</a></p>
                             <!-- Copyright Text Ends -->
                         </div>
                     </div>
