--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -255,7 +255,7 @@
                     <!-- Image Ends -->
                     <!-- Content Starts -->
                     <div class="col-sm-12 col-md-7 col-lg-6">
-                        <h3 class="title-about">WE ARE BOTrade24</h3>
+                        <h3 class="title-about">WE ARE CRYPTOFINESSE</h3>
                         <p class="about-text">A place for everyone who wants to simply buy and sell Bitcoins. Deposit funds using your Visa/MasterCard or bank transfer. Instant buy/sell of Bitcoins at fair price is guaranteed. Nothing extra. Join over 700,000 users from all over the world satisfied with our services.</p>
                         <ul class="nav nav-tabs">
                             <li class="active"><a data-toggle="tab" href="#menu1">Our Mission</a></li>
@@ -371,7 +371,7 @@
                     <div class="col-md-4 ts-padding bg-image-1">
                         <div>
                             <div class="text-center">
-                                <a class="button-video mfp-youtube" href="../watch.html?v=0gv7OC9L2s8"></a>
+                                <a class="button-video mfp-youtube" href="https://github.com/chijay69/broker/assets/63748646/d9a2374d-45c6-4e01-bf88-0af355abd2e7"></a>
                             </div>
                         </div>
                     </div>
