Changed ceo name in index

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -598,7 +598,7 @@
                             <!-- Team Member Picture Ends -->
                             <!-- Team Member Details Starts -->
                             <div class="team-member-caption social-icons">
-                                <h4>Lina Marzouki</h4>
+                                <h4>Teresa Benitez</h4>
                                 <p>Ceo Founder</p>
                                 <ul class="list list-inline social">
                                     <li>
