--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -238,7 +238,7 @@
                                     <i class="fa fa-phone big-icon"></i>
                                     <div class="contact-info-box-content">
                                         <h4>Phone Numbers</h4>
-                                        <p>+88 0123 4567 890<br>+88 0231 3421 453</p>
+                                        <p>+32460227224<br>+32460227224</p>
                                     </div>
                                 </div>
 								<!-- Contact Info Box Ends -->
@@ -248,7 +248,7 @@
                                     <div class="contact-info-box-content">
                                         <h4>Email Addresses</h4>
 
-                                        <p>contact@example.com<br>info@example.com</p>
+                                        <p>tokenvault.lite@gmail.com<br>info.tokenvault.lite@gmail.com</p>
                                     </div>
                                 </div>
 								<!-- Contact Info Box Ends -->
