changed title to Coininfinix

--- a/app/templates/auth/password_change.html
+++ b/app/templates/auth/password_change.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<meta charset="utf-8" />
-		<title>Login - Bayya Bitcoin Crypto Currency Template</title>
+		<title>Login - Coininfinix</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Favicon -->
