--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>About Us</title>
+    <title>About Us - Coininfinx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
