--- a/app/templates/main/about_to_withdrawl.html
+++ b/app/templates/main/about_to_withdrawl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Coininfinix</title>
 </head>
 <body>
 <h1>A user clicked the withdraw page </h1>
