--- a/app/templates/main/bitcoin.html
+++ b/app/templates/main/bitcoin.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>BTC - Cryptofinesse</title>
+    <title>BTC - Coininfinx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
