--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Contact Us</title>
+    <title>Contact Us - Coininfinix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
