--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Cryptofinesse</title>
+    <title>Coininfinx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
@@ -255,7 +255,7 @@
                     <!-- Image Ends -->
                     <!-- Content Starts -->
                     <div class="col-sm-12 col-md-7 col-lg-6">
-                        <h3 class="title-about">WE ARE CRYPTOFINESSE</h3>
+                        <h3 class="title-about">WE ARE COININFINIX</h3>
                         <p class="about-text">A place for everyone who wants to simply buy and sell Bitcoins. Deposit funds using your Visa/MasterCard or bank transfer. Instant buy/sell of Bitcoins at fair price is guaranteed. Nothing extra. Join over 700,000 users from all over the world satisfied with our services.</p>
                         <ul class="nav nav-tabs">
                             <li class="active"><a data-toggle="tab" href="#menu1">Our Mission</a></li>
