--- a/app/templates/main/services.html
+++ b/app/templates/main/services.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Our Services </title>
+    <title>Our Services - Coininfinix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
