--- a/app/templates/main/upgrade.html
+++ b/app/templates/main/upgrade.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Upgrade - Cryptofinesse</title>
+    <title>Upgrade - Coininfinix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
