--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Cryptofinesse Dashboard</title>
+    <title>Coininfinix Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
