--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Unconfirmed Account - Coininfinixs</title>
+    <title>Unconfirmed Account - Coininfinix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
